Udpate Offer page.

--- a/src/pages/local-offer-apply.astro
+++ b/src/pages/local-offer-apply.astro
@@ -6,6 +6,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import CookieConsent from '../components/CookieConsent.astro';
 import CtaLink from '../components/CtaLink.astro';
+import Button from '../components/Button.astro';
 
 const pageTitle = 'Local Hello Offer Apply | Reignite Solutions';
 const pageDesc =
