--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,11 @@ const pageDesc =
   'Get Clarity, Momentum, and Results. We deliver product strategy, UX design, and acceleration  by embedding in your team. No buzzwords. Real progress.';
 ---
 <BaseLayout title={pageTitle} description={pageDesc}>
-    <TopBanner
-    eyebrow="New Offer"
-    title="Fancy 50% off?"
-    body="If your business is within 5 miles of Ilkley, West Yorkshire, you could get 50% off one project."
-    ctaLabel="View the offer"
+  <TopBanner
+    eyebrow="Local Offer"
+    title="A little boost for local businesses"
+    body="We’re giving Ilkley and surrounding villages 50% off one full project. It’s our way of helping local work get moving again."
+    ctaLabel="Check the details"
     buttonClass="normal-case"
     ctaVariant="secondary"
     ctaHref="/local-offer"
