--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -208,8 +208,7 @@ body {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5rem;
-  position: sticky;
-  top: 0;
+  position: relative;
   padding-bottom: 0.5rem;
   z-index: 1;
 }
